# ppp-semantic-model

./: .gitignore  README.md
project/: CMakeLists.txt
project/data/: test1.txt
project/src/compiler/: CMakeLists.txt  parser.c  parser.h  scanner.c  tlt.c  util.c
project/src/launcher/: CMakeLists.txt  main.c
project/src/smodel/: CMakeLists.txt  constant-spec.c  constant-spec.h  constant.c  constant.h  context-spec.c  context-spec.h  context.c  context.h  global.c  global.h  instruction-create-01.c  instruction-create-02.c  instruction-create.c  instruction-dbg-out.c  instruction-list.c  instruction.c  instruction.h  name-table.c  name-table.h  operand.c  operand.h  type-spec.c  type-spec.h  type.c  type.h  var-spec.c  var-spec.h  var.h  variable.c  variable.h
project/tests/test-constant-01/: CMakeLists.txt  main.c
project/tests/test-instruction-01/: CMakeLists.txt  main.c
project/tests/test-operand-01/: CMakeLists.txt  main.c
project/tests/test-smile-packages/func/src/: FuncAdd02<<x@(int,int)->int  FuncSenSignal03<<x@int->signal
project/tests/test-smile-packages/mix/src/: FuncAdd01<<x@(bool,bool)->bool
project/tests/test-smile-packages/proto/src/: only_name
project/tests/test-smile-packages/start/: id  no-id  post-const-bool-false  post-const-bool-true  post-const-int-10  pref-const-bool-false  pref-const-bool-true  pref-const-int-10  pref-const_signal
project/tests/test-smodel-01/: CMakeLists.txt  main.c
project/tests/test-type-01/: CMakeLists.txt  main.c
project/tests/test-variable-01/: CMakeLists.txt  main.c
